--- a/wrangler.toml
+++ b/wrangler.toml
@@ -7,5 +7,6 @@ main = "worker.js"
 # تاریخ سازگاری برای استفاده از قابلیت‌های جدید
 compatibility_date = "2024-03-20"
 
-# فلگ‌های سازگاری (با ساختار صحیح)
+# فلگ‌های سازگاری (برای فعال کردن تست پینگ TCP)
 compatibility_flags = ["nodejs_compat"]
+
