--- a/wrangler.toml
+++ b/wrangler.toml
@@ -9,3 +9,10 @@ compatibility_date = "2024-03-20"
 
 # Enables Node.js compatibility APIs, required for features like TCP sockets (`connect`).
 compatibility_flags = ["nodejs_compat"]
+
+# KV Namespace binding.
+# This section is REQUIRED for the subscription (UUID) feature to work.
+# It connects your code to a Cloudflare KV storage.
+[[kv_namespaces]]
+binding = "V2V_KV" # The name your code will use to access the KV. DO NOT CHANGE.
+id = "YOUR_KV_NAMESPACE_ID_HERE" # ⚠️ IMPORTANT: Replace this with the actual ID from your Cloudflare dashboard.
