--- a/.github/workflows/scrape_configs.yml
+++ b/.github/workflows/scrape_configs.yml
@@ -36,7 +36,7 @@ jobs:
         env:
           GH_PAT: ${{ secrets.GH_PAT }}
 
-      - name: Update Public Folder with Latest Data
+      - name: Update Public Folder
         run: |
           cp all_live_configs.json public/
           cp cache_version.txt public/
@@ -45,19 +45,16 @@ jobs:
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
           commit_message: "📊 DATA: Update configs"
-          # This action will only commit if there are actual changes.
       
-      - name: Upload Artifact for Deployment Jobs
+      - name: Upload Artifact for Deployment
         uses: actions/upload-pages-artifact@v3
         with:
           path: './public'
 
-  # --- DEPLOYMENT JOBS ---
-  # These jobs will now always run after a successful build.
-
   deploy_to_github_pages:
     needs: scrape_and_build
     runs-on: ubuntu-latest
+    continue-on-error: true
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
@@ -69,6 +66,7 @@ jobs:
   deploy_to_vercel:
     needs: scrape_and_build
     runs-on: ubuntu-latest
+    continue-on-error: true
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
@@ -91,6 +89,7 @@ jobs:
   deploy_to_arvancloud:
     needs: scrape_and_build
     runs-on: ubuntu-latest
+    continue-on-error: true
     steps:
       - name: Download Artifact
         uses: actions/download-artifact@v4
@@ -98,14 +97,12 @@ jobs:
           name: github-pages
           path: public
 
-      - name: Configure AWS Credentials for ArvanCloud
-        uses: aws-actions/configure-aws-credentials@v4
-        with:
-          aws-access-key-id: ${{ secrets.ARVAN_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.ARVAN_SECRET_ACCESS_KEY }}
-          aws-region: "us-east-1" # This is a placeholder, Arvan doesn't use it.
-
       - name: Deploy to ArvanCloud S3
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.ARVAN_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.ARVAN_SECRET_ACCESS_KEY }}
+          AWS_REGION: "us-east-1"
         run: |
           aws s3 sync ./public s3://v2v-data --endpoint-url https://s3.ir-thr-at1.arvanstorage.com --acl public-read --delete
+
 
