--- a/.github/workflows/scrape_configs.yml
+++ b/.github/workflows/scrape_configs.yml
@@ -31,17 +31,14 @@ jobs:
       - name: Install Python Dependencies
         run: pip install -r requirements.txt
 
-      - name: Run Scraper Script
+      - name: Run Scraper Script to Generate Files in ./public
         run: python scraper.py
         env:
           GH_PAT: ${{ secrets.GH_PAT }}
       
-      - name: Prepare Public Folder for Deployment
-        run: |
-          mv all_live_configs.json public/
-          mv cache_version.txt public/
-          mv clash_subscription.yml public/
-      
+      # ✅ تغییر کلیدی ۱: مرحله اضافی "Prepare Public Folder" حذف شد
+      # اسکریپت پایتون حالا مستقیماً فایل‌ها را در پوشه public می‌سازد.
+
       - name: Commit and Push Changes to Repository
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
@@ -56,7 +53,6 @@ jobs:
   deploy_to_github_pages:
     needs: scrape_and_build
     runs-on: ubuntu-latest
-    continue-on-error: true
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
@@ -68,7 +64,6 @@ jobs:
   deploy_to_vercel:
     needs: scrape_and_build
     runs-on: ubuntu-latest
-    continue-on-error: true
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
@@ -76,9 +71,6 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: github-pages
-          # ✅ تغییر کلیدی و نهایی:
-          # مسیر دانلود به '.' تغییر کرد تا با مرحله ابرآروان یکسان شود.
-          # این کار تضمین می‌کند که ورسل ریشه سایت را به درستی تشخیص دهد.
           path: .
       - name: Deploy to Vercel
         uses: amondnet/vercel-action@v25
@@ -86,12 +78,13 @@ jobs:
           vercel-token: ${{ secrets.VERCEL_TOKEN }}
           vercel-org-id: ${{ secrets.VERCEL_ORG_ID }}
           vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID }}
+          # ✅ تغییر کلیدی ۲: به ورسل می‌گوییم ریشه سایت پوشه public است
           vercel-args: '--prod'
+          working-directory: ./public
 
   deploy_to_arvancloud:
     needs: scrape_and_build
     runs-on: ubuntu-latest
-    continue-on-error: true
     steps:
       - name: Download Build Artifact
         uses: actions/download-artifact@v4
@@ -107,6 +100,7 @@ jobs:
           ARVAN_S3_ENDPOINT: https://s3.ir-thr-at1.arvanstorage.com
           ARVAN_S3_BUCKET: s3://v2v-data
         run: |
-          aws s3 sync . ${{ env.ARVAN_S3_BUCKET }} --endpoint-url ${{ env.ARVAN_S3_ENDPOINT }} --acl public-read --delete
+          # ✅ تغییر کلیدی ۳: فقط محتویات داخل پوشه public را به ابر آروان منتقل می‌کنیم
+          aws s3 sync ./public ${{ env.ARVAN_S3_BUCKET }} --endpoint-url ${{ env.ARVAN_S3_ENDPOINT }} --acl public-read --delete
 
 
