--- a/.github/workflows/scrape_configs.yml
+++ b/.github/workflows/scrape_configs.yml
@@ -22,33 +22,24 @@ jobs:
         uses: actions/checkout@v4
         with:
           token: ${{ secrets.GH_PAT }}
-
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.12"
-
       - name: Install Python Dependencies
         run: pip install -r requirements.txt
-
       - name: Run Scraper to Generate Files in Root
         run: python scraper.py
         env:
           GH_PAT: ${{ secrets.GH_PAT }}
-      
-      # ✅ تغییر نهایی: مرحله انتقال فایل به طور کامل حذف شد چون اسکریپت فایل‌ها را در جای درست می‌سازد.
-      
       - name: Commit and Push Changes to Repository
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
           commit_message: "📊 DATA: Update configs"
-          # ✅ تغییر نهایی: تمام فایل‌های جدید در ریشه کامیت می‌شوند
           file_pattern: "*.json *.yml *.txt"
-      
       - name: Upload Artifact for Deployment Jobs
         uses: actions/upload-pages-artifact@v3
         with:
-          # ✅ تغییر نهایی: از ریشه اصلی ('./') آرتیفکت می‌سازیم
           path: '.'
 
   deploy_to_github_pages:
@@ -66,18 +57,15 @@ jobs:
     needs: scrape_and_build
     runs-on: ubuntu-latest
     steps:
-      - name: Download Build Artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: github-pages
-          path: .
+      # ✅ اصلاح کلیدی: checkout کامل مخزن برای حل خطای 'not a git repository'
+      - name: Checkout Repository with Latest Data
+        uses: actions/checkout@v4
       - name: Deploy to Vercel
         uses: amondnet/vercel-action@v25
         with:
           vercel-token: ${{ secrets.VERCEL_TOKEN }}
           vercel-org-id: ${{ secrets.VERCEL_ORG_ID }}
           vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID }}
-          # ✅ تغییر نهایی: به ورسل می‌گوییم ریشه سایت همینجاست (ریشه اصلی)
           working-directory: .
           vercel-args: '--prod'
 
@@ -90,7 +78,6 @@ jobs:
         with:
           name: github-pages
           path: .
-      
       - name: Deploy to ArvanCloud S3
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.ARVAN_ACCESS_KEY_ID }}
@@ -99,7 +86,7 @@ jobs:
           ARVAN_S3_ENDPOINT: https://s3.ir-thr-at1.arvanstorage.com
           ARVAN_S3_BUCKET: s3://v2v-data
         run: |
-          # ✅ تغییر نهایی: تمام محتویات دانلود شده در ریشه را به ابر آروان منتقل می‌کنیم
-          aws s3 sync . ${{ env.ARVAN_S3_BUCKET }} --endpoint-url ${{ env.ARVAN_S3_ENDPOINT }} --acl public-read --delete
+          # ✅ بهینه‌سازی: افزودن هدر cache-control برای بروزرسانی سریع‌تر
+          aws s3 sync . ${{ env.ARVAN_S3_BUCKET }} --endpoint-url ${{ env.ARVAN_S3_ENDPOINT }} --acl public-read --delete --cache-control max-age=300
 
 
